@@ -282,7 +282,7 @@ class SubCommandManager:
 jug SUBCOMMAND [JUGFILE] [OPTIONS...]
 
 Docs: https://jug.readthedocs.io/
-Copyright: 2008-2020, Luis Pedro Coelho
+Copyright: 2008-2021, Luis Pedro Coelho
 Citation: http://doi.org/10.5334/jors.161
 
 If you use Jug for generating results for a peer-reviewed publication, please
